fix images being too wide

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@ body {
 img {
   float: left;
   margin-right: 20px;
+  max-width: 100%;
 }
 
 .slide {
